# routes/qna/index.js
@@ -5,6 +5,8 @@ const router = express.Router();
 
 router.get('/', ctrl.getQnas)
   .post('/', ctrl.writeQna)
+  .get('/my-question', ctrl.getMyQuestion)
+  .get('/my-answer', ctrl.getMyAnswer)
   .get('/:id', ctrl.getQnaDetail)
   .post('/:id', ctrl.writeQnaComment)
 //  .delete('/:id', ctrl.deleteQna)
